--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,11 @@ langchain-community==0.2.6
 langchain-core==0.2.10
 langchain-text-splitters==0.2.2
 chromadb==0.5.3
-sentence-transformers==3.0.1
-huggingface-hub==0.20.3
 pdfplumber==0.11.1
 python-dotenv==1.0.1
+numpy==1.26.4
+onnxruntime==1.19.2
+tokenizers==0.19.1
+huggingface-hub==0.20.3
+requests==2.32.3
+tqdm==4.66.4
